--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+
+    <h1>Aprendiendo Javascript</h1>
+
+    <div id="app"></div>
+
+
     <script src="js/app.js"></script>
 </body>
 
